# pkw-web

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  caddy-snippet.txt  compose.yaml  deploy.sh  main.py  pyproject.toml
app/: config.py  wiki.py
app/components/: badges.py  layout.py  markdown.py  page_list.py
app/pages/: folder.py  help.py  home.py  page.py  search.py
data/: WDOD_palette.md
